fix the bug with cancel button visibility in contact form

--- a/src/app/features/contacts/components/contact-form/contact-form.component.scss
+++ b/src/app/features/contacts/components/contact-form/contact-form.component.scss
@@ -90,10 +90,10 @@
 			gap: 16px;
 			max-width: 422px;
 			width: 100%;
+		}
 
-			.btn--secondary {
-				display: none;
-			}
+		&__cancel {
+			display: none;
 		}
 	}
 }
